# 05-chat

./: .env  Cargo.toml  README.md  deny.toml  test.rest
.github/workflows/: build.yml
chat_core/: Cargo.toml
chat_core/fixtures/: decoding.pem
chat_core/src/: lib.rs
chat_core/src/middlewares/: auth.rs
chat_core/src/utils/: jwt.rs
chat_server/: Cargo.toml  app.yml
chat_server/fixtures/: encoding.pem  test.sql
chat_server/sql/: init.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs  openapi.rs
chat_server/src/handlers/: auth.rs  chat.rs  messages.rs  workspace.rs
chat_server/src/middlewares/: chat.rs
chat_server/src/models/: chat.rs  file.rs  message.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
chat_test/: Cargo.toml  chat.yml  notify.yml
chat_test/tests/: chat.rs
migrations/: 20240603053035_initial.sql  20240613115919_workspace.sql  20240620072653_triggers.sql
notify_server/: Cargo.toml  index.html
notify_server/src/: config.rs  error.rs  lib.rs  main.rs
src/: main.rs
