[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
serde_json = "1.0.117"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
jwt-simple = "0.12.9"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = [
	"compression-full",
	"cors",
	"trace",
	"fs",
] }
uuid = { version = "1.8.0", features = ["v7", "serde"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
sha1 = "0.10.6"
hex = "0.4.3"
mime_guess = "2.0.4"

[dev-dependencies]
sqlx-db-tester = "0.4.0"
http-body-util = "0.1.1"
