[package]
name = "chat_test"
version = "0.1.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chat-core = { workspace = true }
chat-server = { workspace = true, features = ["test-utils"] }
notify-server = { workspace = true }
reqwest = { version = "0.12.4", default-features = false, features = [
	"rustls-tls",
	"json",
	"multipart",
	"stream",
] }
reqwest-eventsource = "0.6.0"
serde = { workspace = true }
serde_json = "1.0.116"
tokio = { workspace = true }
futures = "0.3.30"
